Fixed everything, now just working on adding features

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: HunterVsSpeedrunner
-version: 1.0
+version: 0.2
 author: Leglord
 main: me.Leglord.HunterVsSpeedrunner.Main
 description: 1.16.1 Hunter vs Speedrunner challenge plugin.
@@ -7,4 +7,7 @@ description: 1.16.1 Hunter vs Speedrunner challenge plugin.
 commands:
   compass:
     aliases: [hunt, track]
-    description:  gives speedrunner-tracking compass to hunter 
+    description:  gives speedrunner-tracking compass to hunter
+  untrack:
+    aliases: [goodbye]
+    description:  stops tracking Speedrunnner
